--- a/nginx.conf
+++ b/nginx.conf
@@ -8,8 +8,9 @@ server {
 
     # Angular routing support
     location / {
-        try_files $uri /index.html;
-    }
+    try_files $uri $uri/ /index.html;
+}
+
 
     # Error pages
     error_page 500 502 503 504 /50x.html;
@@ -17,4 +18,5 @@ server {
         root /usr/share/nginx/html;
     }
 }
+
 
