--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,10 @@
 server {
     listen 80;  # container port
 
-    server_name localhost;
+    listen [::]:80 default_server;
+
+    server_name ec2-43-204-150-41.ap-south-1.compute.amazonaws.com;
+
 
     root /usr/share/nginx/html;
     index index.html index.htm;
@@ -9,8 +12,12 @@ server {
     # Angular routing support
     location / {
     try_files $uri $uri/ /index.html;
-}
+    }
 
+    # Error pages
+    error_page 404 /404.html;
+    location = /404.html {
+    }
 
     # Error pages
     error_page 500 502 503 504 /50x.html;
@@ -18,5 +25,4 @@ server {
         root /usr/share/nginx/html;
     }
 }
-
 
